# worklog

./: Cargo.toml  README.md  THIRD_PARTY_NOTICE.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/command/: command.rs  commands.rs  mod.rs
cli/src/util/: duration_parser.rs  mod.rs
export/: Cargo.toml
persistence/: Cargo.toml
persistence/src/: lib.rs
persistence/src/calc/: mod.rs  status.rs  work_item.rs
persistence/src/data_access/: data_access.rs  data_access_factory.rs  mod.rs
persistence/src/entry/: log_entry.rs  mod.rs
persistence/src/work_item/: mod.rs  status.rs  work_item.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/calc/: mod.rs  (+1 more)
ui/: Cargo.toml
ui/src/: main.rs
ui/src/state/: mod.rs  state.rs
ui/src/state/work_item/: mod.rs  work_item.rs
ui/src/util/: mod.rs
ui/src/util/icon/: mod.rs
ui/src/util/icon/assets/material/: README.md
ui/src/util/lens/: in_rc.rs  mod.rs
ui/src/util/ui/: env.rs  mod.rs  theme.rs  ui.rs
ui/src/widget/: list_item_widget.rs  mod.rs
ui/src/widget/button/: button.rs  mod.rs
ui/src/widget/day_view/: controller.rs  day_view.rs  mod.rs
ui/src/widget/day_view/work_item/: mod.rs  work_item_list_item.rs
ui/src/widget/editable_field/: editable_field.rs  mod.rs
ui/src/widget/horizontal_separator/: horizontal_separator.rs  mod.rs
ui/src/widget/sidebar/: mod.rs  sidebar.rs
ui/src/widget/stack/: mod.rs  stack.rs
ui/src/widget/tag_cloud/: mod.rs  tag_cloud.rs
ui/src/widget/util/: double_click.rs  mod.rs
ui/src/widget/when/: mod.rs  when.rs
(+39 files in other folders)
