[package]
name = "ui"
version = "0.1.0"
authors = ["Benjamin Eder <barny.eder@gmail.com>"]
edition = "2018"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
chrono = "0.4.19"
persistence = { path = "../persistence" }
shared = { path = "../shared" }
im = "15.0.0"
